--- a/Python_Classes_and_Object_Oriented_Programming_(OOP)_.ipynb
+++ b/Python_Classes_and_Object_Oriented_Programming_(OOP)_.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "name": "Python Classes and Object Oriented Programming (OOP) .ipynb",
-      "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -32,12 +31,12 @@
         "colab_type": "text"
       },
       "source": [
-        "#Python Class Definitions and OOP (Object-Oriented-Programming)\n",
+        "#**Python Class Definitions and OOP (Object-Oriented-Programming)**\n",
         "##***Primitive-Data-structures*** i.e.  Strings, lists numbers - designed to represent a concepts, but,  what if we want to model something far **more complex**. this is where python classes come into play.\n",
-        "![alt text](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScP78SjcFEmXpKAQj5wY6Ix3bbJgNpQiast80IpteeOwieDU1eEA)\n",
+        "![alt text](https://sunscrapers.com/blog/wp-content/uploads/2018/07/Zrzut-ekranu-2018-07-16-o-16.19.31.png)\n",
         "\n",
         "\n",
-        "###Class vs Instance : classes are used to create \"user-defined\" data structures that contain data that pertains to some object. This provides the ability to model \"real-world\" scenarios, AKA a \"blueprint\" on how something should be designed. An \"Instance\" is the actual object that is built from the class. We will implement a class representing a \"Car\" below\n",
+        "###**Class vs Instance** : classes are used to create \"user-defined\" data structures that contain data that pertains to some object. This provides the ability to model \"real-world\" scenarios, AKA a \"blueprint\" on how something should be designed. An \"Instance\" is the actual object that is built from the class. We will implement a class representing a \"Car\" below\n",
         "\n",
         "*   Special Function: **Instance Methods** - function that is part of a class. This defines \"behaviors\" and actions that the object can perform with the data\n",
         "\n"
@@ -141,7 +140,11 @@
       "metadata": {
         "id": "kjYm7bG9mqWE",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "1e35bf9e-dea8-4593-d9a4-a5904ac36818",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
       },
       "source": [
         "restaurant = Restaurant('the mean queen', 'pizza')\n",
@@ -151,7 +154,20 @@
         "restaurant.open_restaurant()  # Acessing the method open restaurant#"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The Mean Queen\n",
+            "pizza\n",
+            "\n",
+            "The Mean Queen servers wonderful pizza.\n",
+            "\n",
+            "The Mean Queen is open, come in\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -168,7 +184,11 @@
       "metadata": {
         "id": "KFRyekTOq_lr",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "1772979f-77a9-425a-e047-2a03adea7cf7",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 115
+        }
       },
       "source": [
         "mean_queen = Restaurant(\"The Mean Queen\", \"Pizza\")\n",
@@ -179,7 +199,20 @@
         "mango_thai.describe_restaurant()"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "The Mean Queen servers wonderful Pizza.\n",
+            "\n",
+            "Ludvigs Bistro servers wonderful seafood.\n",
+            "\n",
+            "Mango Thai servers wonderful thai food.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -196,7 +229,11 @@
       "metadata": {
         "id": "wjexD0dtUtw9",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "cdb79d5c-bc2d-4513-ecb0-838322222c36",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 98
+        }
       },
       "source": [
         "print(\"\\nnumber_served: \" + str(restaurant.number_served))\n",
@@ -208,7 +245,19 @@
         "print(\"Number served: \" + str(restaurant.number_served))"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "number_served: 0\n",
+            "Number served: 430\n",
+            "Number served: 1257\n",
+            "Number served: 1496\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -272,7 +321,11 @@
       "metadata": {
         "id": "pDM5dEI-wS93",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "5e251701-eba8-408c-f4db-0f603f3a3e55",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
       },
       "source": [
         "eric = User('Kyle', 'Bearden', 'kyle', 'kyle@nullgrp.com', 'pennsylvania')\n",
@@ -280,14 +333,32 @@
         "eric.greet_user()"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Kyle Bearden\n",
+            "  Username: kyle\n",
+            "  Email: kyle@nullgrp.com\n",
+            "  Location: Pennsylvania\n",
+            "\n",
+            "Welcome Back, kyle!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zQcptyXKxaIe",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "d993805a-1ab9-472b-b352-46e41ef28c04",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
       },
       "source": [
         "willie = User('willie', 'burger', 'willieburger', 'wb@email,com', 'alaska')\n",
@@ -295,7 +366,21 @@
         "willie.greet_user()"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Willie Burger\n",
+            "  Username: willieburger\n",
+            "  Email: wb@email,com\n",
+            "  Location: Alaska\n",
+            "\n",
+            "Welcome Back, willieburger!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -360,6 +445,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eA7tTpmj3IGH",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "1yaZbP-1ufsE",
@@ -388,26 +483,60 @@
       "metadata": {
         "id": "kZwYEv_BfUBW",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "2900d83b-7aa4-4d8e-9b47-06b1e8a9b152",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
         "chacha.name  # access the 'name' attribute from the Dog class above #"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'chacha'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "RalAyNHafs6y",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "1ef133f6-98c4-48e3-fdea-175a425a432e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
         "chacha.age # access the age attrubutre from the Dog class #"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -424,26 +553,60 @@
       "metadata": {
         "id": "faA8hBQ-gKyd",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "265c7171-3961-4d9f-9054-acb11920eaa3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
         "chacha.species  #access the species Dog class level attribute #"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Canis familiaris '"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "sFwQSjBhgzgq",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "915ea8f3-464a-4a06-a393-06d1fb17e0f1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
         "chacha.species == miles.species  #using classes \"guarantees\" ALL instances have the same attributes. Chacha and miles has the same 'species' attribute #"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -483,13 +646,30 @@
       "metadata": {
         "id": "rRSk-90jle4G",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "107768c2-0934-4016-8f9e-6e93f80a398b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
         "chacha.age  # display the updated attribute value #"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -509,13 +689,30 @@
       "metadata": {
         "id": "wpV0AJnrmbwl",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "9cbbb823-9499-4535-ec9e-d8bf054624ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        }
       },
       "source": [
         "miles.species  # display th species change#"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Felis silvestris'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
