--- a/Generating_Data_in_Python.ipynb
+++ b/Generating_Data_in_Python.ipynb
@@ -5,13 +5,14 @@
     "colab": {
       "name": "Generating-Data in Python.ipynb",
       "provenance": [],
-      "toc_visible": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -32,7 +33,7 @@
       },
       "source": [
         "#**Data Visualiztion in Python: Generating data** \n",
-        "![alt text](https://img.scoop.it/Hc5JKCzfuCe9WHAHB9HvXzl72eJkfbmt4t8yenImKBVvK0kTmF0xjctABnaLJIm9)**"
+        "![alt text](https://miro.medium.com/max/1600/1*nN5-hITqzDlhelSJ2W9x5g.gif)**"
       ]
     },
     {
@@ -53,11 +54,23 @@
         "colab": {}
       },
       "source": [
-        " from google.colab import drive\n",
+        " from google.colab import drive  # mount google drive #\n",
         "drive.mount('/content/drive')"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4Wvws0RRjyrt",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Plotting a simple line Graph with MATPLOTLIB**\n",
+        "\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -67,9 +80,65 @@
         "colab": {}
       },
       "source": [
+        "import matplotlib.pyplot as plt   # Import Matplotlib pyplot module using the alias plt . this way you dont have to type pyplot repeatedly #\n",
+        "squares = [1, 4, 9, 16, 25]  # create a list to hold the squares \n",
+        "plt.plot(squares) # pass squares to the plot() function which will attempt to plot the numbers in meaningful way #\n",
+        "plt.show()  # This opens the matplotlib viewer and displays the plot . the viewer allowd you to ZOOM and navigate the plot #"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5nLymfQsd84w",
+        "colab_type": "text"
+      },
+      "source": [
+        "Well use a few customizations to improve the rwadability of the plot"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Qu1M3yCceGx-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "import matplotlib.pyplot as plt\n",
         "squares = [1, 4, 9, 16, 25]\n",
-        "plt.plot(squares)\n",
+        "plt.plot(squares, linewidth=7) "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2ve9usgQeiFV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Set chart title snf label axis #\n",
+        "plt.title(\"Square Numbers\", fontsize=24)\n",
+        "plt.xlabel(\"Value\", fontsize=14)\n",
+        "plt.ylabel(\"Square of Value\", fontsize=14) "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q_-An2B9fEOq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Set the Tick labels #\n",
+        "plt.tick_params(axis='both', labelsize=14)\n",
         "plt.show()"
       ],
       "execution_count": 0,
