--- a/Generating_Data_in_Python.ipynb
+++ b/Generating_Data_in_Python.ipynb
@@ -108,7 +108,7 @@
       "source": [
         "import matplotlib.pyplot as plt\n",
         "squares = [1, 4, 9, 16, 25]\n",
-        "plt.plot(squares, linewidth=7) "
+        "plt.plot(squares, linewidth=7) # the linewidth parameter controls the thickness of the line plot() generates"
       ],
       "execution_count": 0,
       "outputs": []
@@ -122,9 +122,10 @@
       },
       "source": [
         "# Set chart title snf label axis #\n",
-        "plt.title(\"Square Numbers\", fontsize=24)\n",
-        "plt.xlabel(\"Value\", fontsize=14)\n",
-        "plt.ylabel(\"Square of Value\", fontsize=14) "
+        "plt.title(\"Square Numbers\", fontsize=24)  # the title() function sets the title for the chart #\n",
+        "plt.xlabel(\"Value\", fontsize=14) # this parameter controls the size of the text on the chart # \n",
+        "plt.ylabel(\"Square of Value\", fontsize=14) \n",
+        "# the x-label()/y-label() functions allows you to set a title for each axis # "
       ],
       "execution_count": 0,
       "outputs": []
@@ -138,7 +139,100 @@
       },
       "source": [
         "# Set the Tick labels #\n",
-        "plt.tick_params(axis='both', labelsize=14)\n",
+        "plt.tick_params(axis='both', labelsize=14)  # this function styles the tick-marks on 'both' the x and y axes (axes='both') and sets the fontsize of the tick-mark labels #\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eOYyozsfi8Rt",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Correcting the Plot**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VUQRXiOXjGO0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "input_values = [1, 2, 3, 4, 5]\n",
+        "squares = [1, 4, 9, 16, 25]\n",
+        "plt.plot(input_values, squares, linewidth=5)\n",
+        "#Now plot() will graph the data correctly because we've provded both the input and output values, so it doesnt have to assume how the output numbers will be generated #\n",
+        "# you can specify numberous arguments when using plot() and use a number of functions to customize your plots # "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LLXVO0s6k4jA",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Plotting and Styling Individual pointd with Scatter()**\n",
+        "\n",
+        "Sometimes its useful to plot and syle individual point based upon certain characterisitics. You may want to plot small values in one color and large values in another color. You could also plot a large data-set with one SET of style options and then emphasize individual point by replotting them with different style options\n",
+        "\n",
+        "To plot a single point, use the *scatter()* function. Pass the single (x,y) values of the point of interest to scatter() and it should plot those values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3MpHcIBam182",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.scatter(2,4)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "slrp0lG2nJ_O",
+        "colab_type": "text"
+      },
+      "source": [
+        "Lets style the output to make it more interesting .We will add a title, label the axes, and ensure the text is large enough to read. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_RFNTPWdngBk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "plt.scatter(2, 4, s=200)\n",
+        "\n",
+        "# Set chart title and label axes.\n",
+        "plt.title(\"Square Numbers\", fontsize=24)\n",
+        "plt.xlabel(\"Value\", fontsize=14)\n",
+        "plt.ylabel(\"Square of Value\", fontsize=14)\n",
+        "\n",
+        "# set the tick labels #\n",
+        "plt.tick_params(axis ='both', which='major', labelsize=14)\n",
+        "\n",
+        "#plt\n",
         "plt.show()"
       ],
       "execution_count": 0,
