--- a/Generating_Data_in_Python.ipynb
+++ b/Generating_Data_in_Python.ipynb
@@ -6,6 +6,7 @@
       "name": "Generating-Data in Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +34,7 @@
       },
       "source": [
         "#**Data Visualiztion in Python: Generating data** \n",
-        "![alt text](https://miro.medium.com/max/1600/1*nN5-hITqzDlhelSJ2W9x5g.gif)**"
+        "![alt text](https://miro.medium.com/max/1600/1*6orEuCOf0HsnCp_wzKPs3A.gif)**"
       ]
     },
     {
@@ -180,7 +181,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##**Plotting and Styling Individual pointd with Scatter()**\n",
+        "##**Plotting and Styling Individual points with Scatter()**\n",
         "\n",
         "Sometimes its useful to plot and syle individual point based upon certain characterisitics. You may want to plot small values in one color and large values in another color. You could also plot a large data-set with one SET of style options and then emphasize individual point by replotting them with different style options\n",
         "\n",
@@ -222,7 +223,7 @@
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
-        "plt.scatter(2, 4, s=200)\n",
+        "plt.scatter(2, 4, s=200)  # we call scatter() with the 's' argument to set the size of the dots used to draw the graph #\n",
         "\n",
         "# Set chart title and label axes.\n",
         "plt.title(\"Square Numbers\", fontsize=24)\n",
@@ -237,6 +238,49 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "w_RQzJYa1rAD",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Plotting a Series of Points with Scatter()**\n",
+        "\n",
+        "To plot a series of points, we can pass Scatter() seperate lists of x- and y-values like this: "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wABbC4cz2RPI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "x_values = [1, 2, 3, 4, 5]\n",
+        "y_values = [1, 4, 9, 16, 25]\n",
+        "\n",
+        "plt.scatter(x_values, y_values, s=100)\n",
+        "# Set chart title and label axes..\n",
+        "# this will draw a scatter plot with multiple points\n",
+        "# where these lists are passed to scatter(), Matplotlib reads once value from each list as it plots each point (1,1), (2,4), (3,9) #"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rzOmvR5J6KcR",
+        "colab_type": "text"
+      },
+      "source": [
+        "##**Calculating data Automatically**"
+      ]
     }
   ]
 }
